# PlkPlatform

./: .gitignore  AGENTS.md  AutoUpdate_logic.py  BuddyCareExcel_logic.py  BuddyCareExcel_ui.py  CLAUDE.md  Chat_logic.py  Chat_ui.py  DataCenter_logic.py  DataCenter_ui.py  F43.db  F43Export_lib.py  F43Export_lib_zip.py  F43Export_logic.py  F43Export_ui.py  F43Import_dlg.py  F43_db_path.py  F43_queries.py  HdcTelemed_logic.py  HdcTelemed_ui.py  HisSetting_dlg.py  His_factory.py  His_lib.py  His_lib_pg.py  Main_logic.py  Main_ui.py  PersonDetail_dlg.py  PlkPlatform.spec  QuickVisit_logic.py  QuickVisit_ui.py  Setting_helper.py  TelemedDaily_logic.py  TelemedDaily_ui.py  Theme_helper.py  build_f43_db.py  build_zip_sqlite.py  del_visit.sql  main.py  postgres_visit_type_count.sql  pyproject.toml  (+6 more)
.claude/: settings.local.json
docs/: auto_update.md  deploy-with-auto-update-feature.md  hosxp.md  hosxp_pcu.md  jhcis.md  menu.md  setting_collection.md  vendor_hos_07547_source_selects.sql
export/: last_research.md
export43/: ACCIDENT.py  ADDRESS.py  ADMISSION.py  ANC.py  APPOINTMENT.py  CARD.py  CARE_REFER.py  CHARGE_IPD.py  CHARGE_OPD.py  CHRONIC.py  CHRONICFU.py  CLINICAL_REFER.py  COMMUNITY_ACTIVITY.py  COMMUNITY_SERVICE.py  DATA_CORRECT.py  DEATH.py  DENTAL.py  DIAGNOSIS_IPD.py  DIAGNOSIS_OPD.py  DISABILITY.py  DRUGALLERGY.py  DRUG_IPD.py  DRUG_OPD.py  DRUG_REFER.py  EPI.py  FP.py  FUNCTIONAL.py  HOME.py  ICF.py  INVESTIGATION_REFER.py  LABFU.py  LABOR.py  NCDSCREEN.py  NEWBORN.py  NEWBORNCARE.py  NUTRITION.py  PERSON.py  POLICY.py  POSTNATAL.py  PRENATAL.py  (+14 more)
(+53 files in other folders)
