[project]
name = "plkplatform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pymysql>=1.1.2",
    "psycopg2-binary>=2.9.9",
    "pyqt6>=6.11.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
]
